# root_cause_analysis

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: deploy.yml
aiqe_rca/: config.py
aiqe_rca/api/: __init__.py  main.py  routes.py  schemas.py
aiqe_rca/audit/: __init__.py  hasher.py  trace_map.py
aiqe_rca/engine/: __init__.py  alignment_classifier.py  confidence.py  evidence_associator.py  evidence_categorizer.py  gap_detector.py  hypothesis_builder.py  pattern_facts.py  pipeline.py  ranker.py
aiqe_rca/models/: __init__.py  alignment.py  audit.py  evidence.py  gaps.py  hypothesis.py  report.py
aiqe_rca/parser/: __init__.py  csv_parser.py  docx_parser.py  image_parser.py  json_parser.py  pdf_parser.py  router.py  txt_parser.py  xlsx_parser.py
aiqe_rca/report/: __init__.py  generator.py  language_lint.py  renderer.py
aiqe_rca/rules/: domain_templates.yaml  evidence_schema.yaml  language_rules.yaml  signal_groups.yaml
aiqe_rca/synthesis/: __init__.py  (+1 more)
deploy/: AWS_SETUP_GUIDE.md  cloudformation.yml  deploy-ec2.sh  deploy.ps1  deploy.sh
docs/: AIQE_Phase2_Appendix_A_Internal_Evidence_Handling.docx  AIQE_Phase2_Behavior_Rules_Detailed.docx  AIQE_Phase2_Dev_Doc JS Final.docx  Dev Clarification.docx  Test01_ExpectedOutput_Report.docx  Test01_LabTestReport.docx  roadmap.py
reports/: canonical-test01-validation.md  phase2-production-validation.md
tests/: test_01_integration.py  test_api_openapi.py  test_engine.py  test_parsers.py
(+18 files in other folders)
